--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -673,7 +673,7 @@ input[placeholder]{
 }
 .form-control{
     display: inline-block;
-    width: 10%;
+    width: 100%;
     height: calc(1.5em + .75rem + 2px);
     padding: .375rem .75rem;
     font-size: 1rem;
@@ -768,12 +768,11 @@ input[placeholder]{
     pointer-events: auto;
 }
 .modal-window>div {
-    width: 400px;
-    position: fixed;
-    top: 45%;
-    left: -100%;
-    max-height: 90vh;
-    transform: translate(-50%, -50%);
+    width: 270px;
+    position: relative;
+    top: 10%;
+    right: -30px;
+    /* transform: translate(-50%, -50%); */
     padding: 1em;
     background: #ffffff;
 }
