--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -664,15 +664,19 @@ input[placeholder]{
     display: inline-flex;
     font-size: 14px;
     line-height: 1.6;
-    min-width: 170px;
-    max-width: 170px;
+    min-width: 49%;
+    max-width: 49%;
     flex-wrap: wrap;
     overflow: auto;
 }
 .room-response{
-    display: inline-block;
+    display: inline-flex;
     float: right;
     margin-left: 5px;
+    min-width: 49%;
+    max-width: 49%;
+    /* width: 50%; */
+    flex-wrap: wrap;
 }
 .form-control{
     display: inline-block;
